@@ -407,7 +407,7 @@ fi
 PARALLEL="-j ${jobs} -l ${load}"
 
 # All the things we export to the scripts
-export UNISRC=unisrc-4.8
+export UNISRC=unisrc-mainline
 export ARC_GNU
 export LINUXDIR
 export INSTALLDIR
